--- a/index.html.html
+++ b/index.html.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
     body {
-        background-color: black;
+        background-color: #0a1f44; /* dark blue background */
         color: #f0f0f0;
         font-family: 'Roboto', sans-serif;
         margin: 0;
@@ -61,18 +61,18 @@
         margin: 30px 0;
         text-decoration: none;
         color: black;
-        font-size: 1.5em;
+        font-size: 2em; /* বড় font */
         border: 2px solid #FFD700;
-        padding: 15px 35px;
+        padding: 20px 50px; /* বড় padding */
         border-radius: 15px;
         transition: 0.3s;
         animation: pulse 2s infinite;
         background-color: #FFD700;
     }
     .telegram-button img {
-        width: 30px;
+        width: 35px; /* বড় icon */
         vertical-align: middle;
-        margin-right: 15px;
+        margin-right: 20px;
     }
     .telegram-button:hover {
         background-color: #FFC107;
@@ -84,29 +84,11 @@
         50% { transform: scale(1.08); }
         100% { transform: scale(1); }
     }
-    .screenshots {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 20px;
-        padding: 30px 10px;
-    }
-    .screenshots img {
-        width: 320px;
-        border-radius: 15px;
-        transition: transform 0.3s;
-    }
-    .screenshots img:hover {
-        transform: scale(1.05);
-    }
     @keyframes fadeIn {
         0% { opacity: 0; transform: translateY(-20px); }
         100% { opacity: 1; transform: translateY(0); }
     }
     @media (max-width: 600px) {
-        .screenshots img {
-            width: 90%;
-        }
         .flags img {
             width: 30px;
         }
@@ -114,8 +96,8 @@
             width: 140px;
         }
         .telegram-button {
-            font-size: 1.2em;
-            padding: 12px 25px;
+            font-size: 1.5em;
+            padding: 15px 35px;
         }
     }
 </style>
@@ -141,9 +123,5 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo">
         Free Join Now
     </a>
-    <div class="screenshots">
-        <img src="https://i.postimg.cc/fR5chcPQ/photo-2025-11-25-16-28-41.jpg" alt="Signal Screenshot 1">
-        <img src="https://i.postimg.cc/Pf8Q88Cp/photo-2025-11-25-16-28-41-(3).jpg" alt="Signal Screenshot 2">
-    </div>
 </body>
 </html>
